<resources>
    <string name="app_name">Hello</string>
    <string name="hello">Happy Birthday!</string>
    <string name="from">Your Charlotte</string>
    <string name="btn_label">Button</string>
    <string name="hit_txt">Input RMB</string>
    <string name="lable_add1">+1point</string>
    <string name="lable_add2">+2point</string>
    <string name="lable_add3">+3point</string>
    <string name="btn_reset_label">Reset</string>
    <string name="hint_temp">input degree centigrade</string>
    <string name="lable_tempconver">conver to Fahrenheit</string>
    <string name="temper">tempOutcome:</string>
    <string name="btn_dollar_label">Dollar</string>
    <string name="rmb_hint">Input RMB</string>
    <string name="btn_euro_label">Euro</string>
    <string name="btn_won_label">Won</string>
    <string name="btn_opencfg_label">Config</string>
    <string name="btn_save_label">Save</string>
    <string name="menu_set_label">Setting</string>

</resources>
