<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".TemperatureActivity">

    <EditText
        android:id="@+id/inpTemp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:ems="10"
        android:autofillHints=""
        android:hint="@string/hint_temp"
        android:inputType="number"
        android:textSize="25sp" />

    <Button
        android:id="@+id/tempConver"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:onClick="temp_btnClick"
        android:text="@string/lable_tempconver"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/tempOut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:textSize="30sp"
        android:text="@string/temper" />
</LinearLayout>